# Trixie-Fizzy-Skye

./: .gitignore  B.py  ClientConfig.py  README.md  main.py  pyproject.toml  requirements.txt
cogs/: commands.py
