[tool.poetry]
name = "sodabot"
version = "0.1.0"
description = ""
authors = ["JDJGInc_Offical <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/iDevision/enhanced-discord.py", branch = "2.0"}
jishaku = "^1.20.0"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
