[tool.poetry]
name = "sodabot"
version = "0.1.0"
description = ""
authors = ["JDBot <jdjgbot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
"discord.py" = {git = "https://github.com/Rapptz/discord.py", extras=["voice", "speed"]}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
python-dotenv = ">=1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
